# necsi-evolution-diversity

./: .gitignore  config.toml  environment.py  evolution.py  pycxsimulator.py  test_environment.py
build_debug/: CMakeCache.txt  Makefile  Test  cmake_install.cmake
c_src/: .ycm_extra_conf.py  CMakeLists.txt  FindGSL.cmake  GSLConfig.cmake  SPEC.md  common.c  common.h  environmentmodule.c  grid.c  grid.h  prob_dist.c  prob_dist.h  setup.py  square.c  square.h  test_envmodule.py  test_envmodule.sh  test_grid.c  test_prob_dist.c  test_square.c
cpp/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  Session.vim  Test  cmake_install.cmake  config.toml  environment.cpp  environment.h  test_env.cpp
cpp_src/: .cproject  .project
old_py/: environment.py
